--- a/foundry.toml
+++ b/foundry.toml
@@ -19,8 +19,15 @@ src = 'src-upgradeable/src/'
 [profile.ir_inspect]
 test = 'src'
 
-[rpc_endpoints]
-goerli = '${GOERLI_RPC_URL}'
-mainnet = '${ETHEREUM_RPC_URL}'
+# [rpc_endpoints]
+# goerli = '${GOERLI_RPC_URL}'
+# mainnet = '${ETHEREUM_RPC_URL}'
 
+[rpc_endpoints]
+base-sepolia = "${SEPOLIA_RPC_URL}"
+base = "${BASE_RPC_URL}"
+ 
+[etherscan]
+base-sepolia = { key = "${ETHERSCAN_API_KEY}" }
+base = { key = "${ETHERSCAN_API_KEY}" }
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
