--- a/foundry.toml
+++ b/foundry.toml
@@ -7,8 +7,9 @@ remappings = [
     'openzeppelin-contracts/=lib/openzeppelin-contracts/contracts',
     'ds-test/=lib/forge-std/lib/ds-test/src/',
     'seadrop/=src/',
+    'ERC721A/=lib/ERC721A/contracts/'
 ]
-optimizer_runs = 1_000_000
+optimizer_runs = 10_000_000
 # via_ir = true
 ignored_error_codes = []
 bytecode_hash = "none"
