Added optimizer setting for reducing size,  optimized some fns

--- a/foundry.toml
+++ b/foundry.toml
@@ -9,7 +9,8 @@ remappings = [
     'seadrop/=src/',
     'ERC721A/=lib/ERC721A/contracts/'
 ]
-optimizer_runs = 10_000_000
+optimizer_runs = 200
+ir_inspect = true
 # via_ir = true
 ignored_error_codes = []
 bytecode_hash = "none"
